@@ -25,6 +25,7 @@ OpenLDAP 2.4.41 Engineering
 	Fixed slapo-collect segfault (ITS#7797)
 	Fixed slapo-constraint with 0 count constraint (ITS#7780,ITS#7781)
 	Fixed slapo-deref with empty attribute list (ITS#8027)
+	Fixed slapo-sock result parser for CONTINUE (ITS#8048)
 	Fixed slapo-syncprov synprov_matchops usage of test_filter (ITS#8013)
 	Fixed slapo-syncprov segfault on disconnect/abandon (ITS#5452,ITS#8012)
 	Fixed slapo-syncprov memory leak (ITS#8039)
